--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "gulp": "^3.9.0"
   },
   "dependencies": {
+    "autoprefixer": "^6.0.3",
     "browser-sync": "^2.9.10",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.0.1",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
