--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vgr-build-base",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.1.0",
+  "description": "VGR build extensions for Gulp",
   "author": "",
   "license": "CC-BY-SA-4.0",
   "peerDependencies": {
